--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -75,4 +75,8 @@
   width: 100%;
   height: 100%;
 }
+
+.card-item__favorite-icon svg:hover {
+  fill: rgba(189, 21, 21, 0.6);
+}
 /*# sourceMappingURL=Card.css.map */
