--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -18,4 +18,9 @@
   padding: 0px 15px;
   margin: 0px 0px 10px 0px;
 }
+
+.register-form .section-form__buttons .btn:disabled {
+  background-color: gray;
+  cursor: auto;
+}
 /*# sourceMappingURL=SignUp.css.map */
