--- a/src/components/SignUp/SignUp.scss
+++ b/src/components/SignUp/SignUp.scss
@@ -17,4 +17,12 @@
 		padding: 0px 15px;
 		margin: 0px 0px 10px 0px;
 	}
+
+	.section-form__buttons {
+
+		.btn:disabled {
+			background-color: gray;
+			cursor: auto;
+		}
+	}
 }
