--- a/src/components/SIgnIn/SignIn.css
+++ b/src/components/SIgnIn/SignIn.css
@@ -7,6 +7,11 @@
   margin: 0px 0px 15px 0px;
 }
 
+.auth-form .section-form__buttons .btn:disabled {
+  background-color: gray;
+  cursor: auto;
+}
+
 .auth-form__label {
   display: block;
   font-size: 18px;
