if no film in favorites there is a title

--- a/src/components/Favorites/Favorites.scss
+++ b/src/components/Favorites/Favorites.scss
@@ -4,4 +4,10 @@
 		font-size: 40px;
 		margin: 0px 0px 20px 0px;
 	}
+
+	// .favorites__add
+	&__add {
+		font-size: 20px;
+		margin: 0px 0px 0px 20px;
+	}
 }
