ran prettier on all files

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -75,8 +75,8 @@
 			height: 100%;
 		}
 
-        svg:hover {
-            fill:rgba(189, 21, 21, .6);
-        }
+		svg:hover {
+			fill: rgba(189, 21, 21, 0.6);
+		}
 	}
 }
