--- a/src/components/SearchHistory/SearchHistory.scss
+++ b/src/components/SearchHistory/SearchHistory.scss
@@ -11,7 +11,8 @@
 		margin: 0px 0px 6px 0px;
 
 		&:hover {
-			color: #eee;
+			color: rgb(238, 238, 238);
+			text-decoration: underline;
 		}
 	}
 }
